Add floats and margins to img tags for better display.

--- a/index.html
+++ b/index.html
@@ -14,11 +14,14 @@
     <title>GifTastic</title>
   </head>
   <body>
-    <!-- Buttons will be added in this div. -->
-    <div id="buttonsDiv"></div>
+    <div class="container">
+      <!-- Buttons will be added in this div. -->
+      <div id="buttonsDiv"></div>
 
-    <!-- Gifs will be added in this div. -->
-    <div id="gifsDiv"></div>
+      <!-- Gifs will be added in this div. -->
+      <div id="gifsDiv"></div>  
+    </div>
+    
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS, then my JS -->
