Add form for adding new gifs.

--- a/index.html
+++ b/index.html
@@ -18,6 +18,15 @@
       <!-- Buttons will be added in this div. -->
       <div id="buttonsDiv"></div>
 
+      <!-- Form for adding another button. -->
+      <form class="form-inline">
+        <div class="form-group mb-2">
+          <label for="addNewGif">Add New Gif Button</label>
+          <input type="password" class="form-control" id="addNewGif" placeholder="New Gif">
+        </div>
+        <button type="submit" class="btn btn-primary mb-2">Submit</button>
+      </form>
+
       <!-- Gifs will be added in this div. -->
       <div id="gifsDiv"></div>  
     </div>
