--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
       <form class="form-inline">
         <div class="form-group mb-2">
           <label for="addNewGif">Add New Gif Button</label>
-          <input type="password" class="form-control" id="addNewGif" placeholder="New Gif">
+          <input type="search" class="form-control" id="addNewGif" placeholder="New Gif">
         </div>
-        <button type="submit" class="btn btn-primary mb-2">Submit</button>
+        <button type="button" class="btn btn-primary mb-2">Submit</button>
       </form>
 
       <!-- Gifs will be added in this div. -->
